# shadow-ray

./: Cargo.toml  README.md  ShadowPortal.tsx  package-lock.json  package.json  shadow-ray_v0.1.0.wasm  test-shadow.ts
.github/workflows/: soroban-build.yml
circuits/: Nargo.toml  Prover.toml
circuits/src/: main.nr
contracts/game/: Cargo.toml
contracts/game/src/: lib.rs
shadow-ray-client/: README.md  package.json
shadow-ray-client/src/: index.ts
